--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -71,6 +71,11 @@
         <item quantity="other">%d active filters</item>
     </plurals>
 
+    <string name="title_fused">Filter on data usage</string>
+    <string name="title_finternet">Filter on internet access</string>
+    <string name="title_fpermission">Filter on permission</string>
+    <string name="title_frestricted">Filter on restricted</string>
+    <string name="title_fsystem">Filter on system application</string>
     <string name="settings_serial">شماره سریال</string>
     <string name="settings_lat">عرض جغرافیایی</string>
     <string name="settings_lon">طول جغرافیایی</string>
@@ -82,15 +87,7 @@
     <string name="settings_operator">اپراتور</string>
     <string name="settings_subscriber">شناسه مشترک</string>
     <string name="settings_ua">User agent</string>
-    <string name="settings_fpermission">فیلتر بر اساس مجوزها</string>
-    <string name="settings_fapplication">Filter by application type</string>
     <string name="settings_log">لاگ ایرادیابی (نیازمند دوباره راه اندازی می باشد)</string>
-    <string name="filter_used">فیلتر بر اساس استفاده از داده</string>
-    <string name="filter_internet">فیلتر بر اساس دسترسی به اینترنت</string>
-    <string name="filter_restricted">فیلتر بر اساس ایتم های منع شده</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
     <string name="help_application">برنامه های کاربردی</string>
     <string name="help_internet">مجوز استفاده از اینترنت را دارد</string>
     <string name="help_granted">مجوز اندروید را دارد</string>
