--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -69,6 +69,11 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
         <item quantity="other">%d aktyvūs filtrai</item>
     </plurals>
 
+    <string name="title_fused">Filter on data usage</string>
+    <string name="title_finternet">Filter on internet access</string>
+    <string name="title_fpermission">Filter on permission</string>
+    <string name="title_frestricted">Filter on restricted</string>
+    <string name="title_fsystem">Filter on system application</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
@@ -80,15 +85,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_operator">Operatorius</string>
     <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_ua">User agent</string>
-    <string name="settings_fpermission">Tik naudojami leidimai</string>
-    <string name="settings_fapplication">Filtruoti pagal programos typą</string>
     <string name="settings_log">DEBUG žurnalas (reikia paleisti iš naujo)</string>
-    <string name="filter_used">Duomenų naudojimo filtras</string>
-    <string name="filter_internet">Interneto prieigos filtras</string>
-    <string name="filter_restricted">Leidimų filtras</string>
-    <string name="filter_app_sys">Sistemos programos</string>
-    <string name="filter_app_user">Vartotojo programos</string>
-    <string name="filter_app_both">Visos programos</string>
     <string name="help_application">Programa</string>
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
