--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -69,6 +69,11 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
         <item quantity="other">%d filtros ativos</item>
     </plurals>
 
+    <string name="title_fused">Filter on data usage</string>
+    <string name="title_finternet">Filter on internet access</string>
+    <string name="title_fpermission">Filter on permission</string>
+    <string name="title_frestricted">Filter on restricted</string>
+    <string name="title_fsystem">Filter on system application</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
@@ -80,15 +85,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_operator">Operador</string>
     <string name="settings_subscriber">Identidade do subscritor</string>
     <string name="settings_ua">User agent</string>
-    <string name="settings_fpermission">Filtrar por permissão</string>
-    <string name="settings_fapplication">Filter by application type</string>
     <string name="settings_log">Relatório de depuração (requer reinicialização)</string>
-    <string name="filter_used">Filtrar o uso de dados</string>
-    <string name="filter_internet">Filtrar o acesso à Internet</string>
-    <string name="filter_restricted">Filtrar restrito</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
     <string name="help_application">Aplicação</string>
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
