--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -69,11 +69,11 @@
         <item quantity="other">%d 过滤器</item>
     </plurals>
 
-    <string name="title_fused">Filter on data usage</string>
-    <string name="title_finternet">Filter on internet access</string>
-    <string name="title_fpermission">Filter on permission</string>
-    <string name="title_frestricted">Filter on restricted</string>
-    <string name="title_fsystem">Filter on system application</string>
+    <string name="title_fused">未用数据过滤</string>
+    <string name="title_finternet">无联网权过滤</string>
+    <string name="title_fpermission">无关权限过滤</string>
+    <string name="title_frestricted">未勾限制过滤</string>
+    <string name="title_fsystem">按应用级别过滤</string>
     <string name="settings_serial">序列号</string>
     <string name="settings_lat">纬度</string>
     <string name="settings_lon">经度</string>
