--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -69,11 +69,11 @@
         <item quantity="other">%d सक्रिय फिल्टर</item>
     </plurals>
 
-    <string name="title_fused">Filter on data usage</string>
-    <string name="title_finternet">Filter on internet access</string>
-    <string name="title_fpermission">Filter on permission</string>
-    <string name="title_frestricted">Filter on restricted</string>
-    <string name="title_fsystem">Filter on system application</string>
+    <string name="title_fused">डेटा उपयोग पर फिल्टर करे</string>
+    <string name="title_finternet">इन्टरनेट उपयोग पर फिल्टर करे</string>
+    <string name="title_fpermission">अनुमति के द्वारा फिल्टर करे</string>
+    <string name="title_frestricted">प्रतिबंध पर फिल्टर करे</string>
+    <string name="title_fsystem">सिस्टम की Application पर फिल्टर करे</string>
     <string name="settings_serial">क्रमांक#</string>
     <string name="settings_lat">अक्षांश</string>
     <string name="settings_lon">रेखांश</string>
