Add filter on user applications

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -73,6 +73,7 @@
     <string name="title_finternet">Nach Internet-Zugang filtern</string>
     <string name="title_fpermission">Nach Berechtigungen filtern</string>
     <string name="title_frestricted">FNach Beschränkungen filtern</string>
+    <string name="title_fuser">Filter on user applications</string>
     <string name="title_fsystem">Nach System-Apps filtern</string>
     <string name="settings_serial">Serien-Nr.</string>
     <string name="settings_lat">Breitengrad</string>
