--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -73,7 +73,8 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_finternet">Filter on internet access</string>
     <string name="title_fpermission">Filter on permission</string>
     <string name="title_frestricted">Filter on restricted</string>
-    <string name="title_fsystem">Filter on system application</string>
+    <string name="title_fuser">Filter on user applications</string>
+    <string name="title_fsystem">Filter on system applications</string>
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
