--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -73,6 +73,7 @@
     <string name="title_finternet">इन्टरनेट उपयोग पर फिल्टर करे</string>
     <string name="title_fpermission">अनुमति के द्वारा फिल्टर करे</string>
     <string name="title_frestricted">प्रतिबंध पर फिल्टर करे</string>
+    <string name="title_fuser">Filter on user applications</string>
     <string name="title_fsystem">सिस्टम की Application पर फिल्टर करे</string>
     <string name="settings_serial">क्रमांक#</string>
     <string name="settings_lat">अक्षांश</string>
