--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -73,7 +73,8 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="title_finternet">Filter on internet access</string>
     <string name="title_fpermission">Filter on permission</string>
     <string name="title_frestricted">Filter on restricted</string>
-    <string name="title_fsystem">Filter on system application</string>
+    <string name="title_fuser">Filter on user applications</string>
+    <string name="title_fsystem">Filter on system applications</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
